# GED-CRN

./: .gitignore  CNN_grad_adam.pth  CNN_grad_adam_loss.csv  CNN_grad_sgd.pth  CNN_grad_sgd_loss.csv  CNN_mae_adam.pth  CNN_mae_adam_loss.csv  CNN_mae_sgd.pth  CNN_mae_sgd_loss.csv  README.md  ed.py  from_gen_to_train.py  gen_datalabel.py  gen_dataset.py  gen_line.py  gencube.py  global_constant.py  model.py  props_test.py  save_atom_wfns.py  test.py  train.py  wfn_calc.py  wfn_reader.py  xyz_reader.py
atomic_wfns/: Al.h5  Br.h5  Br.wfn  C.h5  C.wfn  Cl.h5  Cl.wfn  Cu.h5  F.h5  F.wfn  N.h5  N.wfn  P.h5  P.wfn  Se.h5  Si.h5  Si.wfn
atomic_wfns/old/: B.h5  Br.h5  C.h5  C.wfn  F.h5  H.h5  N.h5  Na.h5  O.h5  P.h5  S.h5  Si.h5
rust_wfnkit/: Cargo.toml  pyproject.toml
rust_wfnkit/src/: lib.rs
training_wfns/: alkyl_sp.wfn  bodipy_sp.wfn  boz_sp.wfn  btz_sp.wfn  carbazole_sp.wfn  cyano-stilbene_sp.wfn  dma_sp.wfn  dpmf_sp.wfn  nbd_sp.wfn  pyrene_sp.wfn  stilbene_sp.wfn  tfb_sp.wfn  tpa_sp.wfn  tpe_sp.wfn
training_wfns/asbase/: 0_sp.wfn  105_sp.wfn  106_sp.wfn  10_sp.wfn  110_sp.wfn  111_sp.wfn  112_sp.wfn  113_sp.wfn  115_sp.wfn  117_sp.wfn  121_sp.wfn  122_sp.wfn  124_sp.wfn  127_sp.wfn  128_sp.wfn  129_sp.wfn  12_sp.wfn  131_sp.wfn  132_sp.wfn  134_sp.wfn  135_sp.wfn  139_sp.wfn  141_sp.wfn  143_sp.wfn  144_sp.wfn  14_sp.wfn  16_sp.wfn  17_sp.wfn  20_sp.wfn  22_sp.wfn  23_sp.wfn  24_sp.wfn  25_sp.wfn  27_sp.wfn  29_sp.wfn  32_sp.wfn  33_sp.wfn  34_sp.wfn  36_sp.wfn  37_sp.wfn  (+30 more)
training_wfns/qm9/: dsgdb9nsd_000140_sp.wfn  dsgdb9nsd_000443_sp.wfn  dsgdb9nsd_000474_sp.wfn  (+97 more)
(+23 files in other folders)
