[package]
name = "rust_wfnkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_wfnkit"
crate-type = ["cdylib"]

[dependencies]
parking_lot_core = "0.9.8"
pyo3 = "0.19.0"
rayon = "1.8.1"
indicatif = "0.17.8"
ndarray = "0.15.6"
log = "0.4.21"
pyo3-log = "0.9.0"

[profile.dev]
opt-level = 3

[features]
default = ["indicatif/rayon"]
